--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   {% comment %} Style Sheet {% endcomment %}
-  <link rel="stylesheet" href="{% static '/css/index.css' %}">
+  <link rel="stylesheet" href="{% static 'movies/css/index.css' %}">
   <title>Document</title>
 </head>
 
@@ -19,19 +19,46 @@
   <div class="m-3">
     <div class="row">
     <!-- Sidebar-->
-    <div class="col-3 sidebar d-flex flex-column justify-content-center align-items-center">
-      <div class="mt-5">
+    <div class="col-3 sidebar d-flex flex-column justify-content-center align-items-center mt-5" style="position: sticky; top: 0; height:1000px;">
+
+      {% comment %} 현재 당신의 색 {% endcomment %}
+      <div>
+        <h3> 현재 당신의 색채: </h3>
         <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/Red_flag.svg" class="profile" alt="">
       </div>
       <hr>
-      <h1> Username </h1>
+
+      {% comment %} 로그인 관련 버튼 {% endcomment %}
+      <div>
+      <h1 class="d-inline"> {{ user.username }} </h1>
+
+      <button class="d-inline button"> <span>Logout</span> </button>
+      </div>
       <hr>
-      <h3> hello </h3>
-      <h3> hello </h3>
-      <h3> hello </h3>
-      <h3> hello </h3>
-      <h3> hello </h3>
-      <h3> hello </h3>
+      {% comment %} 선택했던 색들 디자인  {% endcomment %}
+      <div>
+        <h3> 당신이 선택했던 색들의 기록 </h3>
+        <hr><hr><hr><hr>
+        <hr><hr><hr><hr>
+      </div>
+
+      {% comment %} 정렬 관련 버튼 {% endcomment %}
+      <div>
+      <div class="row">
+      <button class="d-inline col-4" > <span>색체로 정렬</span> </button>
+      <button class="d-inline col-4" > <span>평점순 정렬</span> </button>
+      <button class="d-inline col-4" > <span>최신순 정렬</span> </button>
+      </div>
+      </div>
+      <div>
+      <div class="row">
+      <button class="d-inline col-6" > <span>장르별 탐색</span> </button>
+      <button class="d-inline col-6" > <span>키워드 탐색</span> </button>
+      <button class="d-inline col-12" > <span>목소리 탐색</span> </button>
+
+      </div>
+      </div>
+
 
     </div>
 
@@ -39,7 +66,7 @@
     <div class="col-9">
       {% for movie in movies %}
       {% comment %} Card {% endcomment %}
-      <div class="card border-success m-5 text-success" style="height:300px;">
+      <div class="card bg-transparent m-5 text-success rainbow" style="height:300px;" OnClick="location.href ='{% url 'movies:detail' movie.pk %}'" style="cursor:pointer;">
         <div class="card-header"> {{ movie.title }}</div>
         <div class="card-body text-success">
           <div class="row">
