--- a/movies/templates/movies/choice.html
+++ b/movies/templates/movies/choice.html
@@ -28,15 +28,22 @@
       {% comment %} 색 고르기 {% endcomment %}
       <div class="col-7 my-3">
         <div class="colorPicker"></div>
-        <div id="values" class="mt-3"></div>
-        <input id="hexInput"></input>
-        <button><h2>선택</h2></button>
+        <div id="values" class="mt-3 d-none"></div>
+        <input id="hexInput" class="d-none">
+
+        <form action="http://127.0.0.1:8000/movies/usercolor_create/" method="POST" id="selectedForm">
+          {% csrf_token %}
+          <button id="selectedButton" class="btn btn-light bg-white mt-3" style="width: 700px; height: 85px;"><span style="font-weight: bolder; font-size: 45px;">이 <span class="pink">색</span>으로 <span class="cyan">보여줘</span>요</span></button>
+        </form>
       </div>
+
+
     </div>
   </div>
   {% comment %} Color Pick JS {% endcomment %}
   <script src="https://cdn.jsdelivr.net/npm/@jaames/iro@5"></script>
   <script>
+
     // Create a new color picker instance
     // https://iro.js.org/guide.html#getting-started
     var colorPicker = new iro.ColorPicker(".colorPicker", {
@@ -50,11 +57,14 @@
 
     var values = document.getElementById("values");
     var hexInput = document.getElementById("hexInput");
+    const body = document.querySelector('body')
 
     // https://iro.js.org/guide.html#color-picker-events
+    let flag = true
     colorPicker.on(["color:init", "color:change"], function (color) {
       // Show the current color in different formats
       // Using the selected color: https://iro.js.org/guide.html#selected-color-api
+
       values.innerHTML = [
         "hex: " + color.hexString,
         "rgb: " + color.rgbString,
@@ -62,13 +72,36 @@
       ].join("<br>");
 
       hexInput.value = color.hexString;
+      // 색 선택 => 배경 변경
+      if (flag) {
+      flag = false
+    } else {
+      body.style.backgroundColor = color.rgbString
+    }
+
+    // 버튼 클릭 => 다음 페이지 이동 및 데이터 저장
+    const selectedButton = document.querySelector('#selectedButton')
+    
+    selectedButton.addEventListener("click", function () {
+      const form = document.querySelector('#selectedForm')
+      
+      const inputData = document.createElement('input')
+      inputData.setAttribute('name','color')
+      inputData.setAttribute('value', color.rgbString)
+      inputData.setAttribute('class', 'd-none')
+      form.appendChild(inputData)
+
+      form.submit()
+    })
     });
+    
+    
+
 
     hexInput.addEventListener('change', function () {
       colorPicker.color.hexString = this.value;
     });
   </script>
-  {% comment %} Bootstrap JS {% endcomment %}
 
 </body>
 
