detail, review, review_comment, detail_comment
Former-commit-id: 923f9ebeac0f4cc257699fac8a0a080cf8a9d319

--- a/movies/static/movies/css/index.css
+++ b/movies/static/movies/css/index.css
@@ -19,7 +19,7 @@
 
 body {
   font-family: var(--body-font);
-  background-image: url(movies/static/movies/images/backimg.png);
+  background-image: url('/movies/static/movies/images/backimg.png');
   background-size: cover;
   background-position: center;
   display: flex;
