--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -3,7 +3,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Glassmorphism Creative Cloud App Redesign</title>
+  <title>인공지능을 활용한 색체 기반 영화 추천</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="{% static 'movies/css/index.css' %}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -21,7 +21,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 <div class="app">
  <div class="header">
   <div class="header-menu">
-   <a class="menu-link is-active" href="#">인공지능을 활용한 색채 기반 영화 추천</a>
+   <a class="menu-link " href="#" style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채 기반 영화 추천</a>
   </div>
   <div class="search-bar">
    <input type="text" placeholder="Search">
