font_backButton_homeButton_allStructure
Former-commit-id: 1c616ded271ddb0c38243a611cb17f3655e6a6a3

--- a/movies/templates/movies/choice.html
+++ b/movies/templates/movies/choice.html
@@ -13,10 +13,15 @@
   
   {% comment %} Style Sheet {% endcomment %}
   <link rel="stylesheet" href="{% static 'movies/css/choice.css' %}">
+  {% comment %} Google Font {% endcomment %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
   <title>Document</title>
 </head>
 
-<body>
+<body style="font-family: 'Noto Sans KR', sans-serif;">
   <div class="container">
     <div class="row">
       {% comment %} 글귀 {% endcomment %}
