--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -21,8 +21,13 @@
     <link rel="stylesheet" href="{% static 'accounts/css/login.css' %}">
 
     <title> Signup </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+
   </head>
-  <body>
+  
+  <body style="font-family: 'Noto Sans KR', sans-serif;">
   
 
   <div class="d-lg-flex half">
