--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -11,10 +11,14 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><link rel="stylesheet" href="./style.css">
   
+  {% comment %} Google Font {% endcomment %}
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
 </head>
 
-<body>
+<body style="font-family: 'Noto Sans KR', sans-serif;">
   <!-- partial:index.partial.html -->
   <div class="video-bg">
     <video width="320" height="240" autoplay loop muted>
@@ -25,7 +29,7 @@
   <div class="app">
     <div class="header">
       <div class="header-menu">
-        <a class="menu-link " href="#" style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채기반 영화추천</a>
+        <a class="menu-link " href="{% url 'movies:index' %}" style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채기반 영화추천</a>
       </div>
       <div class="search-bar">
         <input type="text" placeholder="Search">
@@ -106,7 +110,7 @@
                 <path
                   d="M464 128h-16v128c0 52.928-43.072 96-96 96H129.376L128 353.152V400c0 26.464 21.536 48 48 48h234.368l75.616 60.512A16.158 16.158 0 00496 512c2.336 0 4.704-.544 6.944-1.6A15.968 15.968 0 00512 496V176c0-26.464-21.536-48-48-48z" />
               </svg>
-              메인화면으로
+              뒤로가기
             </a>
           </div>
         </div>
