--- a/movies/templates/movies/review.html
+++ b/movies/templates/movies/review.html
@@ -11,11 +11,13 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
 </head>
 
-<body>
+<body style="font-family: 'Noto Sans KR', sans-serif;">
   <!-- partial:index.partial.html -->
   <div class="video-bg">
     <video width="320" height="240" autoplay loop muted>
@@ -26,7 +28,7 @@
   <div class="app">
     <div class="header">
       <div class="header-menu">
-        <a class="menu-link " href="#" style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채기반
+        <a class="menu-link " href="{% url 'movies:index' %}" style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채기반
           영화추천</a>
       </div>
       <div class="search-bar">
@@ -101,14 +103,14 @@
 
             </a>
 
-            <a href="{% url 'movies:index' %}">
+            <a href="{% url 'movies:detail' review.movie.pk %}">
               <svg viewBox="0 0 512 512" fill="currentColor">
                 <path
                   d="M352 0H64C28.704 0 0 28.704 0 64v320a16.02 16.02 0 009.216 14.496A16.232 16.232 0 0016 400c3.68 0 7.328-1.248 10.24-3.712L117.792 320H352c35.296 0 64-28.704 64-64V64c0-35.296-28.704-64-64-64z" />
                 <path
                   d="M464 128h-16v128c0 52.928-43.072 96-96 96H129.376L128 353.152V400c0 26.464 21.536 48 48 48h234.368l75.616 60.512A16.158 16.158 0 00496 512c2.336 0 4.704-.544 6.944-1.6A15.968 15.968 0 00512 496V176c0-26.464-21.536-48-48-48z" />
               </svg>
-              메인화면으로
+              뒤로가기
             </a>
           </div>
         </div>
