--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -35,7 +35,7 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
   </div>
   <div class="header-profile">
    <div class="notification d-flex">
-      <h3 style="color:white;">{{ user.username }}</h3>
+      <h3 style="color:white;">{{ user.username }} <button class="btn btn-white" onclick = "location.href = '{% url 'accounts:logout' %}'"> 로그아웃 </button></h3>
    </div>
   
 
