--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -7,7 +7,7 @@
   <div class="main-header">
   </div>
   <div class="content-wrapper">
-    {% for movie in movies %}
+    {% for movie, score in movies %}
     <div class="content-section mt-3">
       <div class="app-card">
         <span>
