--- a/movies/templates/movies/choice.html
+++ b/movies/templates/movies/choice.html
@@ -26,8 +26,8 @@
     <div class="row">
       {% comment %} 글귀 {% endcomment %}
       <div class="col-5 d-flex align-items-center justify-content-center my-3">
-        <h1> 당신의 <span class="pink">색</span>에 대한 </h1>
-        <h1> 영화 <span class="cyan">추천</span>할게요</h1>
+        <h1>당신의 <span class="pink">색</span>을 위한</h1>
+        <h1>영화 <span class="cyan">추천</span>할게요</h1>
       </div>
 
       {% comment %} 색 고르기 {% endcomment %}
