--- a/templates/base.html
+++ b/templates/base.html
@@ -121,7 +121,7 @@
                   <path
                     d="M511.441 189.361L255.721 64.617 0 189.361l255.721 124.744 195.522-95.378v111.032h30V204.092z" />
                 </svg>
-                색체순 정렬
+                AI Z스코어 정렬
               </a>
               <a href="{% url 'movies:index' 2 %}">
                 <svg viewBox="0 0 511.441 511.441" fill="currentColor">
