favicon_main_icon
Former-commit-id: 20bf96d59aae1b1e29454f11914c346df0065521

--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -19,35 +19,35 @@
                 <img src="{{ movie.poster_url }}" alt="" class="col-6" style="border-radius: 10%">
                 <div class="col-6" style="height:400px;">
                   <h3>{{ movie.title }}</h3>
-                  <div style="height: 180px;">
-                  {{ movie.overview|truncatechars:150 }}
+                  <div style="height: 150px;">
+                  {{ movie.overview|truncatechars:125 }}
                   </div>
                   {% comment %} Score Center {% endcomment %}
                   <div class="h-50">
 
                   {% if mode == 2 %}
-                   <h4 class="mt-3">평점평균 :</h4>
+                   <h4 class="mt-2">평점 평균 :</h4>
                    <div class="d-flex align-items-center justify-content-center h-75">
                    <h1 class="mb-5" style="font-size: 80px;">{{ score }}</h1>
                    </div>
                   </div>
 
                   {% elif mode == 3 %}
-                    <h4 class="mt-3">개봉일 :</h4>
+                    <h4 class="mt-2">개봉일 :</h4>
                     <div class="d-flex align-items-center justify-content-center h-75">
                     <h1 class="mb-5" style="font-size: 50px;">{{ score }}</h1>
                     </div>
                   </div>
 
                   {% elif mode == 4 %}
-                    <h4 class="mt-3">일치점수 :</h4>
+                    <h4 class="mt-2">일치점수 :</h4>
                     <div class="d-flex align-items-center justify-content-center h-75">
                     <h1 class="mb-5" style="font-size: 80px;">{{ score }}</h1>
                     </div>
                   </div>
 
                   {% else %}
-                  <h4 class="mt-3">AI Z스코어 :</h4>
+                  <h4 class="mt-2">AI Z스코어 :</h4>
                    <div class="d-flex align-items-center justify-content-center h-75">
                    <h1 class="mb-5" style="font-size: 80px;">{{ score }}</h1>
                    </div>
@@ -56,38 +56,27 @@
                 </div>
               </div>
             </div>
-
+            
             {% comment %} Right Side {% endcomment %}
-            <div class="col-6">
-              <h4> 프레임 추출 :</h4>
-              {% for color in movie.color_set.all %}
-              <img src="{{ color.color_url }}" alt="">
-              {% endfor %}
-
-              <h4> 특정색 추출 Best 5</h4>
-              <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: red; opacity: 0.5;"
-                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: skyblue; opacity: 0.5;"
-                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: orange; opacity: 0.5;"
-                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: yellow; opacity: 0.5;"
-                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-              <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: green; opacity: 0.5;"
-                  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            {% for color in movie.color_set.all %}
+            <div class="col-6" style="height: 400px;">
+              <div class="h-50">
+                <div class="side-title"> 프레임 클러스터링 </div>
+                <img src="{{ color.color_url }}" alt="" class="h-75">
               </div>
 
-
+              <div class="h-50 mt-3">
+                <div class="side-title"> 영화의 색 </div>
+                <div class="d-flex justify-content-between align-items-center mt-4">
+                <i class="fas fa-square" style="color: rgb({{color.color_1_R}},{{color.color_1_G}},{{color.color_1_B}}); font-size: 110px; opacity: 0.9;"></i>
+                <i class="fas fa-square" style="color: rgb({{color.color_2_R}},{{color.color_2_G}},{{color.color_2_B}}); font-size: 110px; opacity: 0.9;"></i>
+                <i class="fas fa-square" style="color: rgb({{color.color_3_R}},{{color.color_3_G}},{{color.color_3_B}}); font-size: 110px; opacity: 0.9;"></i>
+                <i class="fas fa-square" style="color: rgb({{color.color_4_R}},{{color.color_4_G}},{{color.color_4_B}}); font-size: 110px; opacity: 0.9;"></i>
+                <i class="fas fa-square" style="color: rgb({{color.color_5_R}},{{color.color_5_G}},{{color.color_5_B}}); font-size: 110px; opacity: 0.9;"></i>
+                </div>
+              </div>
             </div>
+            {% endfor %}
           </div>
         </span>
         
