--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
 
+    {% comment %} Font Awesome {% endcomment %}
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+    {% comment %} Favicon {% endcomment %}
+    <link rel="apple-touch-icon" sizes="57x57" href="{% static 'favicon/apple-icon-57x57.png' %}">
+    <link rel="apple-touch-icon" sizes="60x60" href="{% static 'favicon/apple-icon-60x60.png' %}">
+    <link rel="apple-touch-icon" sizes="72x72" href="{% static 'favicon/apple-icon-72x72.png' %}">
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'favicon/apple-icon-76x76.png' %}">
+    <link rel="apple-touch-icon" sizes="114x114" href="{% static 'favicon/apple-icon-114x114.png' %}">
+    <link rel="apple-touch-icon" sizes="120x120" href="{% static 'favicon/apple-icon-120x120.png' %}">
+    <link rel="apple-touch-icon" sizes="144x144" href="{% static 'favicon/apple-icon-144x144.png' %}">
+    <link rel="apple-touch-icon" sizes="152x152" href="{% static 'favicon/apple-icon-152x152.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-icon-180x180.png' %}">
+    <link rel="icon" type="image/png" sizes="192x192"  href="{% static 'favicon/android-icon-192x192.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'favicon/favicon-96x96.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     {% comment %} Style Sheet {% endcomment %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
@@ -37,24 +59,26 @@
     <div class="app">
 
       {% comment %} Header {% endcomment %}
-      <div class="header">
+      <div class="header" style="padding: 0px;">
         <div class="header-menu">
           <a class="menu-link " href="{% url 'movies:index' 1 %}"
-            style="font-size: 20px; color: white; font-weight: bolder;">인공지능을 활용한 색채 기반 영화 추천</a>
+            style="font-size: 20px; color: white; font-weight: bolder; opacity: 0.9;"> <i class="fas fa-rainbow" style="margin-right:10px; "></i>인공지능을 활용한 색채 기반 영화 추천</a>
         </div>
 
         {% comment %} Search Bar {% endcomment %}
         <form action="{% url 'movies:index' 4 %}">
-        <div class="search-bar">
-          <input id="searchInput" name="searchData" type="text" placeholder="Search">
+        <div class="search-bar" style="max-width: 2000px; margin-left: 150px;">
+          <input id="searchInput" name="searchData" type="text" placeholder="Search" style="width:550px; border-radius: 1%">
           <button id="searchButton" class="d-none"></button>
         </div>
         </form>
 
-        <div class="header-profile">
-          <div class="notification d-flex">
-            <h3 style="color:white;">{{ user.username }} <button class="btn btn-white"
-                onclick="location.href = '{% url 'accounts:logout' %}'"> 로그아웃 </button></h3>
+        {% comment %} User & Login Button {% endcomment %}
+        <div class="header-profile d-flex justify-content-center align-items-center">
+          <div class="notification d-flex justify-content-center align-items-center">
+            <h3 style="color: white; margin: 10px; opacity: 0.9;">{{ user.username }}</h3>
+            <button class="btn btn-white mt-1" onclick="location.href = '{% url 'accounts:logout' %}'"> <i class="fas fa-exchange-alt" style="color: white; font-size: 20px; opacity: 0.9;"></i> </button>
+            <button class="btn btn-white mt-1" onclick="location.href = '{% url 'accounts:logout' %}'"> <i class="fas fa-sign-out-alt" style="color: white; font-size: 20px; opacity: 0.9;"></i> </button>
           </div>
         </div>
       </div>
@@ -83,7 +107,7 @@
             <div class="side-menu">
               {% for color in colors %}
               <div class="progress mt-3">
-                <div class="progress-bar" role="progressbar" style="width: 100%; background-color: {{ color.color }};"
+                <div class="progress-bar" role="progressbar" style="width: 100%; opacity: 0.6; background-color: {{ color.color }};"
                   aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
               {% endfor %}
@@ -109,45 +133,25 @@
             <div class="side-title">옵션</div>
             <div class="side-menu">
               <a href="{% url 'movies:choice' %}">
-                <svg viewBox="0 0 512 512" fill="currentColor">
-                  <path
-                    d="M467 0H45C20.186 0 0 20.186 0 45v422c0 24.814 20.186 45 45 45h422c24.814 0 45-20.186 45-45V45c0-24.814-20.186-45-45-45zM181 241c41.353 0 75 33.647 75 75s-33.647 75-75 75-75-33.647-75-75c0-8.291 6.709-15 15-15s15 6.709 15 15c0 24.814 20.186 45 45 45s45-20.186 45-45-20.186-45-45-45c-41.353 0-75-33.647-75-75s33.647-75 75-75 75 33.647 75 75c0 8.291-6.709 15-15 15s-15-6.709-15-15c0-24.814-20.186-45-45-45s-45 20.186-45 45 20.186 45 45 45zm180 120h30c8.291 0 15 6.709 15 15s-6.709 15-15 15h-30c-24.814 0-45-20.186-45-45V211h-15c-8.291 0-15-6.709-15-15s6.709-15 15-15h15v-45c0-8.291 6.709-15 15-15s15 6.709 15 15v45h45c8.291 0 15 6.709 15 15s-6.709 15-15 15h-45v135c0 8.276 6.724 15 15 15z" />
-                </svg>
+                <i class="fas fa-fill-drip" style="margin-right: 10px;"></i>
                 색채 고르기
               </a>
               <a href="{% url 'movies:index' 1 %}">
-                <svg viewBox="0 0 511.441 511.441" fill="currentColor">
-                  <path d="M255.721 347.484L90.22 266.751v106.57l165.51 73.503 165.509-73.503V266.742z" />
-                  <path
-                    d="M511.441 189.361L255.721 64.617 0 189.361l255.721 124.744 195.522-95.378v111.032h30V204.092z" />
-                </svg>
-                AI Z스코어 정렬
+                <i class="fas fa-brain" style="margin-right: 10px;"></i>
+                AI Z스코어
               </a>
               <a href="{% url 'movies:index' 2 %}">
-                <svg viewBox="0 0 511.441 511.441" fill="currentColor">
-                  <path d="M255.721 347.484L90.22 266.751v106.57l165.51 73.503 165.509-73.503V266.742z" />
-                  <path
-                    d="M511.441 189.361L255.721 64.617 0 189.361l255.721 124.744 195.522-95.378v111.032h30V204.092z" />
-                </svg>
-                평점순 정렬
+                <i class="far fa-star" style="margin-right: 10px;"></i>
+                평점순
               </a>
               <a href="{% url 'movies:index' 3 %}">
-                <svg viewBox="0 0 512 512" fill="currentColor">
-                  <path d="M196 151h-75v90h75c24.814 0 45-20.186 45-45s-20.186-45-45-45z" />
-                  <path
-                    d="M467 0H45C20.186 0 0 20.186 0 45v422c0 24.814 20.186 45 45 45h422c24.814 0 45-20.186 45-45V45c0-24.814-20.186-45-45-45zM196 271h-75v105c0 8.291-6.709 15-15 15s-15-6.709-15-15V136c0-8.291 6.709-15 15-15h90c41.353 0 75 33.647 75 75s-33.647 75-75 75zm210-60c8.291 0 15 6.709 15 15s-6.709 15-15 15h-45v135c0 8.291-6.709 15-15 15s-15-6.709-15-15V241h-15c-8.291 0-15-6.709-15-15s6.709-15 15-15h15v-45c0-24.814 20.186-45 45-45h30c8.291 0 15 6.709 15 15s-6.709 15-15 15h-30c-8.276 0-15 6.724-15 15v45h45z" />
-                </svg>
-                최신순 정렬
+                <i class="far fa-clock" style="margin-right: 10px;"></i>
+                최신순
 
               </a>
             
               <a href={% block back_URL %} {% endblock back_URL %}>
-                <svg viewBox="0 0 512 512" fill="currentColor">
-                  <path
-                    d="M352 0H64C28.704 0 0 28.704 0 64v320a16.02 16.02 0 009.216 14.496A16.232 16.232 0 0016 400c3.68 0 7.328-1.248 10.24-3.712L117.792 320H352c35.296 0 64-28.704 64-64V64c0-35.296-28.704-64-64-64z" />
-                  <path
-                    d="M464 128h-16v128c0 52.928-43.072 96-96 96H129.376L128 353.152V400c0 26.464 21.536 48 48 48h234.368l75.616 60.512A16.158 16.158 0 00496 512c2.336 0 4.704-.544 6.944-1.6A15.968 15.968 0 00512 496V176c0-26.464-21.536-48-48-48z" />
-                </svg>
+                <i class="fas fa-undo-alt" style="margin-right: 10px;"></i>
                 뒤로가기
               </a>
             </div>
