--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
         {% comment %} Search Bar {% endcomment %}
         <form action="{% url 'movies:index' 4 %}">
         <div class="search-bar" style="max-width: 2000px; margin-left: 150px;">
-          <input id="searchInput" name="searchData" type="text" placeholder="Search" style="width:550px; border-radius: 1%">
+          <input id="searchInput" name="searchData" type="text" placeholder="영화 검색하기" style="width:550px; border-radius: 1%">
           <button id="searchButton" class="d-none"></button>
         </div>
         </form>
