--- a/movies/templates/movies/choice.html
+++ b/movies/templates/movies/choice.html
@@ -11,12 +11,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
-  {% comment %} Style Sheet {% endcomment %}
-  <link rel="stylesheet" href="{% static 'movies/css/choice.css' %}">
   {% comment %} Google Font {% endcomment %}
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet">
+  
+  {% comment %} Font Awesome {% endcomment %}
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
+  {% comment %} Style Sheet {% endcomment %}
+  <link rel="stylesheet" href="{% static 'movies/css/choice.css' %}">
 
   <title>Document</title>
 </head>
@@ -38,8 +42,13 @@
 
         <form action="http://127.0.0.1:8000/movies/usercolor_create/" method="POST" id="selectedForm">
           {% csrf_token %}
-          <button id="selectedButton" class="btn btn-light bg-white mt-3" style="width: 700px; height: 85px;"><span style="font-weight: bolder; font-size: 45px;">이 <span class="pink">색</span>으로 <span class="cyan">보여줘</span>요</span></button>
+          <button id="selectedButton" class="btn btn-light bg-white mt-3" style="width: 700px; height: 85px;"><span style="font-weight: bolder; font-size: 45px;"></i>이 <span class="pink">색</span>으로 <span class="cyan">보여줘</span>요</span></button>
         </form>
+        
+          {% comment %} User가 1번 이상 색을 골랐을 때만, 평점순 / 최신순 옵션 보여주기 {% endcomment %}
+          {% if user.usercolorrecord_set.all %}
+          <button class="btn btn-light mt-3" style="background-color: transparent; border: none; width: 700px; height: 50px;"><span style="font-weight: bolder; font-size: 30px; opacity: 0.7;"><a href="{% url 'movies:index' 2 %}" style="text-decoration-line : none;">그냥 평점순 /</a> <a href="{% url 'movies:index' 3 %}" style="text-decoration-line : none;">최신순으로 볼래요.</span></a></button>
+          {% endif %}
       </div>
 
 
