fix-movie-comment
Former-commit-id: 4ec98b05c7e48e474a15fb2265c6d12e95750298

--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -69,9 +69,7 @@
             {% comment %} Stars {% endcomment %}
             <div id="full-stars-example-two">
               <div class="rating-group">
-                <input disabled checked class="rating__input rating__input--none" name="grade" id="rating3-none"
-                  value="0" type="radio">
-                <label aria-label="1 star" class="rating__label" for="rating3-1"><i
+                <label aria-label="1 star" class="rating__label" for="grade-1"><i
                     class="rating__icon rating__icon--star fa fa-star"></i></label>
                 <input class="rating__input" name="grade" id="grade-1" value="1" type="radio">
                 <label aria-label="2 stars" class="rating__label" for="grade-2"><i
